Set min node version to 0.12 in package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/goinstant/global-tunnel.git"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": ">=0.12"
   },
   "dependencies": {
     "lodash": "1.3.1",
